[tool.poetry]
name = "reproducible-builds"
version = "0.1.0"
description = "Reproducible builds for the python package ecosystem"
authors = ["Martin Carnogursky <admin@sourcecode.ai>"]

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

packages = [
    { include = "reproducible_builds" }
]


[tool.poetry.dependencies]
python = "^3.9 || ^3.10"
requests = "~2.28"
click = "~8.1.3"
packaging = "~21.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
